objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>Included_in_project_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, the child project data will be included in the project plan generated by Conga.</description>
        <inlineHelpText>If you would like this sub-project included in the Project Plan, please check this box.</inlineHelpText>
        <label>Included in project plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Independent_Contractor_Email__c</fullName>
        <inlineHelpText>The email address of the Independent Contractor assigned to this project (if applicable)</inlineHelpText>
        <label>Independent Contractor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Independent_Contractor_Name__c</fullName>
        <inlineHelpText>The name of the Independent Contractor assigned to this project (if applicable)</inlineHelpText>
        <label>Independent Contractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Independent_Contractor_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if there has been an Independent Contractor assigned to the project.</inlineHelpText>
        <label>Independent Contractor Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Independent_Contractor_Phone__c</fullName>
        <inlineHelpText>The phone number of the Independent Contractor assigned to this project (if applicable)</inlineHelpText>
        <label>Independent Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initiate_Because_of_DRE_Training__c</fullName>
        <label>Initiate Because of DRE Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Stakeholder__c</fullName>
        <label>Intended Stakeholder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <inlineHelpText>The intervention/exposure of interest for this research question</inlineHelpText>
        <label>Intervention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Client_Deliverable_Date__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Latest Sub-Project Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learning_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Learning &amp; Development representative for this sub-project (i.e. user responsible for training client on DOC platforms)</inlineHelpText>
        <label>Learning &amp; Development</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_ProjectsTZpq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Librarian_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for all aspects related to the literature search (i.e. writing search strings, executing search, etc.)</inlineHelpText>
        <label>Sr. Search Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Library_Package_ID__c</fullName>
        <inlineHelpText>The new or existing LMS Package ID created to house references associated with this sub-project. This can be found on the top of the package details page. This field is required for any sub-project tracking references of of any origin and purpose (almost</inlineHelpText>
        <label>Library Package ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Package_Name__c</fullName>
        <inlineHelpText>The new or existing LMS Package Name. This can be found on the top of the package details page. This field is required for any sub-project tracking references of of any origin and purpose (almost every sub-projects will need an LMS package).</inlineHelpText>
        <label>Library Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Submission__c</fullName>
        <inlineHelpText>The congress or publisher targeted for this sub-project.</inlineHelpText>
        <label>Location of Submission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Longer_Product_Lifetime__c</fullName>
        <description>Longer Product Lifetime for Better / Sustained Adoption.</description>
        <inlineHelpText>Longer Product Lifetime for Better / Sustained Adoption.</inlineHelpText>
        <label>Longer Product Lifetime</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New indication</fullName>
                </value>
                <value>
                    <fullName>Extension of indication</fullName>
                </value>
                <value>
                    <fullName>Sustaining reimbursement</fullName>
                </value>
                <value>
                    <fullName>RX to OTC conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Empowerment__c</fullName>
        <description>Medical Empowerment for Transversal Contributions.</description>
        <inlineHelpText>Medical Empowerment for Transversal Contributions.</inlineHelpText>
        <label>Medical Empowerment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improve local disease expertise</fullName>
                </value>
                <value>
                    <fullName>Easy access to data</fullName>
                </value>
                <value>
                    <fullName>Better knowledge management</fullName>
                </value>
                <value>
                    <fullName>New insights generation &amp; validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Value_Description__c</fullName>
        <label>Medical Value Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meet_Business_Objective__c</fullName>
        <label>Meet Business Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all</fullName>
                </value>
                <value>
                    <fullName>2 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfactory</fullName>
                </value>
                <value>
                    <fullName>5 - Completely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meth_Rep_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly: Methodology Lead</description>
        <inlineHelpText>The primary user responsible for all aspects related to methodological decisions &amp; directing the work work of the team.</inlineHelpText>
        <label>Methodologist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meth_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly, Methodology Associate</description>
        <inlineHelpText>The secondary user responsible for all aspects related to methodological decisions &amp; directing the work work of the team.</inlineHelpText>
        <label>Sr. Clinical Data Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meth_Rep_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meth Rep #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Methodology_Question_Type__c</fullName>
        <inlineHelpText>The research question type.</inlineHelpText>
        <label>Methodology Question Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animal / Pre-clinical / Pathophysiological</fullName>
                </value>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Efficacy / Effectiveness / Safety, Comparative</fullName>
                </value>
                <value>
                    <fullName>Efficacy / Effectiveness / Safety, Non-Comparative</fullName>
                </value>
                <value>
                    <fullName>Epidemiology</fullName>
                </value>
                <value>
                    <fullName>Health Services Delivery</fullName>
                </value>
                <value>
                    <fullName>Humanistic Burden</fullName>
                </value>
                <value>
                    <fullName>Prognosis</fullName>
                </value>
                <value>
                    <fullName>Unclear/Need More Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Appropriate_Access__c</fullName>
        <description>More Appropriate Access.</description>
        <inlineHelpText>More Appropriate Access.</inlineHelpText>
        <label>More Appropriate Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Speed up regulatory process</fullName>
                </value>
                <value>
                    <fullName>Arguments to address local specificities</fullName>
                </value>
                <value>
                    <fullName>Opportunity sizing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Appropriate_Pricing__c</fullName>
        <description>More Appropriate Pricing for More Appropriate Access.</description>
        <inlineHelpText>More Appropriate Pricing for More Appropriate Access.</inlineHelpText>
        <label>More Appropriate Pricing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build cost model customized to local needs</fullName>
                </value>
                <value>
                    <fullName>Identify sub-groups with higher cost</fullName>
                </value>
                <value>
                    <fullName>Produce health economic model for local needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Trainings__c</fullName>
        <label>Number of Trainings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1+ Sessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <formula>TEXT(TASKRAY__trOpportunity__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ontology_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for all aspects related to ontology.</inlineHelpText>
        <label>Ontology Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ontology_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ontology Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_ProjectsKeMM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for retrieving full-texts after title/abstract screening.</inlineHelpText>
        <label>Operations Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7nk2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Deliverable__c</fullName>
        <inlineHelpText>The format(s) in which internal assets are to be prepared. Please select multiple if a client is receiving multiple deliverables for a given sub-project. This field does not need to be 1:1 for a given sub-project.</inlineHelpText>
        <label>Operations Deliverable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term Index</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Other/Custom</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>TASKRAY__trOpportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>TASKRAY__trOpportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>The outcome(s) of interest for this research question. This should provide enough detail to specify unique results (i.e. no broad categories).</inlineHelpText>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outputs_Description__c</fullName>
        <label>Outputs Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Satisfaction__c</fullName>
        <description>DRE's overall perception of project requestor's comments and feedback.</description>
        <inlineHelpText>DRE's overall perception of project requestor's comments and feedback.</inlineHelpText>
        <label>Overall Project Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Pending Evaluation</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Advanced to Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>PO Number issued by DRE Accounting for External Vendor.</description>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Experience__c</fullName>
        <description>Patient Experience for Transversal Contributions.</description>
        <inlineHelpText>Patient Experience for Transversal Contributions.</inlineHelpText>
        <label>Patient Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Patient_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Department__c</fullName>
        <formula>Contact_Name__r.Department</formula>
        <label>Primary Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant_Email__c</fullName>
        <formula>Principal_Scientist__r.Email</formula>
        <label>Principal Consultant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant_Title__c</fullName>
        <formula>Principal_Scientist__r.Title</formula>
        <label>Principal Consultant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Scientist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly: Principal Scientist</description>
        <inlineHelpText>The user primarily responsible for all client engagement.</inlineHelpText>
        <label>Principal Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principle_Consultant_Phone__c</fullName>
        <formula>Principal_Scientist__r.Phone</formula>
        <label>Principle Consultant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Grade__c</fullName>
        <inlineHelpText>The grading, as defined by the highest order of intent, of a given parent project. This field must be updated as a project matures through different stages.</inlineHelpText>
        <label>Priority Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grade A: Publication, Abstract, Poster or HTA</fullName>
                </value>
                <value>
                    <fullName>Grade B: Payer or Regulatory response</fullName>
                </value>
                <value>
                    <fullName>Grade C: Clinical business question</fullName>
                </value>
                <value>
                    <fullName>Grade Z: Sanofi iEGP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <inlineHelpText>Enter the general problem or project stakes that are addressed by the project, i.e. WHY is the client asking for DRE to perform the work?</inlineHelpText>
        <label>Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Claim__c</fullName>
        <description>Product Claim for Better / Sustained Adoption.</description>
        <inlineHelpText>Product Claim for Better / Sustained Adoption.</inlineHelpText>
        <label>Product Claim</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New effectiveness medical claims</fullName>
                </value>
                <value>
                    <fullName>New safety medical claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Monitoring__c</fullName>
        <description>Product Monitoring for Better / Sustained Adoption.</description>
        <inlineHelpText>Product Monitoring for Better / Sustained Adoption.</inlineHelpText>
        <label>Product Monitoring</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market penetration uptakes</fullName>
                </value>
                <value>
                    <fullName>Prescription behaviors</fullName>
                </value>
                <value>
                    <fullName>Switches from/to competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Management_Email__c</fullName>
        <defaultValue>'projectmanagement@doctorevidence.com'</defaultValue>
        <description>Project Management email for email alerts.  Default is projectmanagement@doctorevidence.com</description>
        <label>Project Management Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Objectives__c</fullName>
        <label>Project Objectives</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage_New__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - New Project Request</fullName>
                    <default>true</default>
                    <label>1 - New Project Request</label>
                </value>
                <value>
                    <fullName>2 - In Progress</fullName>
                </value>
                <value>
                    <fullName>3 - Delivered to Client</fullName>
                </value>
                <value>
                    <fullName>4 - Client Feedback Request</fullName>
                </value>
                <value>
                    <fullName>5 - Client Feedback Received</fullName>
                </value>
                <value>
                    <fullName>6 - Project Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Stage_Read_Only__c</fullName>
        <formula>TEXT(Project_Stage_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stakes__c</fullName>
        <label>Project Stakes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Team__c</fullName>
        <inlineHelpText>The primary project team responsible for completing the sub-project.</inlineHelpText>
        <label>Project Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Endocrinology 1</fullName>
                </value>
                <value>
                    <fullName>Endocrinology 2</fullName>
                </value>
                <value>
                    <fullName>Endocrinology 3</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal 4</fullName>
                </value>
                <value>
                    <fullName>Cardiology 5</fullName>
                </value>
                <value>
                    <fullName>Cardiology 6</fullName>
                </value>
                <value>
                    <fullName>Neurology 7</fullName>
                </value>
                <value>
                    <fullName>Neurology 8</fullName>
                </value>
                <value>
                    <fullName>Immunology 9</fullName>
                </value>
                <value>
                    <fullName>Immunology 10</fullName>
                </value>
                <value>
                    <fullName>Oncology 11</fullName>
                </value>
                <value>
                    <fullName>Oncology 12</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timeliness__c</fullName>
        <label>Project Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all</fullName>
                </value>
                <value>
                    <fullName>2 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfactory</fullName>
                </value>
                <value>
                    <fullName>5 - Completely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>The client's intended use for a given sub-project (i.e. client motivation for initiating a given sub-project).</inlineHelpText>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>2 - Bibliographic</fullName>
                </value>
                <value>
                    <fullName>3 - Internal Strategy</fullName>
                </value>
                <value>
                    <fullName>4 - Potential Publication</fullName>
                </value>
                <value>
                    <fullName>5 - HTA</fullName>
                </value>
                <value>
                    <fullName>Bibliographic</fullName>
                    <isActive>false</isActive>
                    <label>Bibliographic</label>
                </value>
                <value>
                    <fullName>HTA</fullName>
                    <isActive>false</isActive>
                    <label>HTA</label>
                </value>
                <value>
                    <fullName>Internal Strategy (Research)</fullName>
                    <isActive>false</isActive>
                    <label>Internal Strategy (Research)</label>
                </value>
                <value>
                    <fullName>Potential Publication (Research)</fullName>
                    <isActive>false</isActive>
                    <label>Potential Publication (Research)</label>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Rapid Assessment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>The research question to be investigated or objective of the given sub-project (must be unique across sub-projects if different services are intended to answer different aspects of a larger research question).</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Project requestor's comments received upon project closure.</description>
        <inlineHelpText>Project requestor's comments received upon project closure.</inlineHelpText>
        <label>Requestor's Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Meeting_Time__c</fullName>
        <label>Requested Meeting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_First_Name__c</fullName>
        <formula>Contact_Name__r.FirstName</formula>
        <label>Requester First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Client_Full_Text_Screen__c</fullName>
        <label>Requires Client Full-Text Screen?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retrieved_and_De_Duped__c</fullName>
        <inlineHelpText>The number of studies retrieved and de-duped after library search, before title/abstract screening.</inlineHelpText>
        <label># Retrieved and De-Duped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scientific_Communications__c</fullName>
        <description>Scientific Communication for Transversal Contributions.</description>
        <inlineHelpText>Scientific Communication for Transversal Contributions.</inlineHelpText>
        <label>Scientific Communications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increased transparency</fullName>
                </value>
                <value>
                    <fullName>Attractiveness to KOLs</fullName>
                </value>
                <value>
                    <fullName>Responsiveness (to field team for example)</fullName>
                </value>
                <value>
                    <fullName>Generated high impact factor article(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Project_Name__c</fullName>
        <inlineHelpText>Brief description of research question in the form of a title.</inlineHelpText>
        <label>Secondary Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <inlineHelpText>Enter a description of the work being performed to address the client-stated need for the project, i.e. HOW is DRE solving the business problem as requested by the client?</inlineHelpText>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_Submission__c</fullName>
        <inlineHelpText>The current status of a submission. This field must be updated to reflect the current status through a sub-project's timeline.</inlineHelpText>
        <label>Status of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work in progress</fullName>
                </value>
                <value>
                    <fullName>Submitted - awaiting decision</fullName>
                </value>
                <value>
                    <fullName>Submitted - edits in progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Project_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Sub-Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Deadline__c</fullName>
        <inlineHelpText>The final date a submission must be delivered.</inlineHelpText>
        <label>Submission Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingIds__c</fullName>
        <label>Share to Chatter Groups (ID)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingNames__c</fullName>
        <label>Share to Chatter Groups (Name)</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>